novas cores dos textos

--- a/receipt.html
+++ b/receipt.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./receipt.css">
+    <link rel="stylesheet" href="./Style.css">
     <title>Receita Torta de Limão</title>
 </head>
 
 <body>
 
+    <div id="container">
+        
     <h1>Torta de Limão</h1>
     <p>Confira essa receita de torta de limão com bolacha, uma sobremesa tradicional, queridinha dos brasileiros e
         perfeita pra todas as horas! Ela é simples, sua massa é feita com biscoito maizena e o limão dá um sabor bem
@@ -66,15 +68,16 @@
     <h6>Informações adicionais</h6>
     <p>Você pode servir esta receita como sobremesa.</p>
     <br>
-    <footer>
-        <p>Feito com <ion-icon name="heart"></ion-icon> por: Gustavo Freitas</p>
-        <p>Link <a href="https://github.com/gugak95" target="blank">Github</a></p>
-    </footer>
+  
+</div>
 
-
-
+<footer>
+    <p>Feito com <ion-icon name="heart"></ion-icon> por: Gustavo Freitas</p>
+    <p>Link <a href="https://github.com/gugak95" target="blank">Github</a></p>
+</footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
